<resources>
    <string name="app_name">Eco Vitae</string>
    <string name="title_activity_maps">Map</string>
    <string name="Toolbar_title">Eco Vitae</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_act">Създайте акаунт</string>
    <string name="googlesuccessful">Успешен вход</string>
    <string name="googlenotsuccessful">Неуспешен вход</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main2">Eco Vitae</string>
    <string name="title_activity_main3">Eco Vitae</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Eco Vitae</string>
    <string name="menu_gallery">Карта</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Профил</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_map">Map</string>
    <string name="menu_newacc">Създайте нов акаунт</string>
    <string name="menu_profile">Профил</string>
    <string name="menu_news">Новини</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="menu_tips">Съвети</string>
    <string name="menu_bonus">Бонуси</string>
    <string name="menu_shop">Партньори</string>
    <string name="menu_info">Информация</string>


</resources>
