<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.appp.ecovitae.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.appp.ecovitae.ui.map.MapFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.appp.ecovitae.ui.profile.ProfileFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.appp.ecovitae.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.appp.ecovitae.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.appp.ecovitae.ui.newacc.NewaccFragment"
        android:label="@string/menu_newacc"
        tools:layout="@layout/fragment_newacc" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.appp.ecovitae.ui.tips.TipsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/nav_shops"
        android:name="com.appp.ecovitae.ui.send.ShopsFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shops" />

    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.appp.ecovitae.ui.send.BonusFragment"
        android:label="@string/menu_bonus"
        tools:layout="@layout/fragment_bonus" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.appp.ecovitae.ui.send.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />


    <fragment
        android:id="@+id/nav_onebonus"
        android:name="com.appp.ecovitae.ui.send.OneBonusFragment"
        android:label="@string/menu_bonus"
        tools:layout="@layout/fragment_shop" />



</navigation>