<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Начало" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_map"
            android:title="Карта" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_newacc"
            android:title="@string/menu_newacc" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"

            />
    </group>

    <item android:title="Информация">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />

            <item
                android:id="@+id/nav_tips"
                android:icon="@drawable/ic_menu_tips"
                android:title="@string/menu_tips" />

        </menu>
    </item>

    <item android:title="Бонуси и партньори">
        <menu>
            <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_menu_shop"
                android:title="@string/menu_shop" />
            <item
                android:id="@+id/nav_bonus"
                android:icon="@drawable/ic_menu_bonus"
                android:title="@string/menu_bonus" />
        </menu>
    </item>

</menu>
